force-app/main/default/objects/Activity/fields/cvb__Stage__c.field-meta.xml
<CustomField>
    <fullName>cvb__Stage__c</fullName>
    <description>Used to represent phases when working on Claims</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cvb__Stages</valueSetName>
    </valueSet>
</CustomField>