force-app/main/default/objects/Activity/fields/cve__Closed__c.field-meta.xml
<CustomField>
    <fullName>cve__Closed__c</fullName>
    <inlineHelpText>The Datetime that the task was set to a &quot;Closed&quot; status. A Closed&quot; status can be any status that marks the Activity as Closed and moves it to the Activity History section. &quot;Completed&quot; is an example of one of these statuses</inlineHelpText>
    <label>Closed</label>
    <type>DateTime</type>
</CustomField>