force-app/main/default/objects/Activity/fields/cve__OverdueBusinessDays__c.field-meta.xml
<CustomField>
    <fullName>cve__OverdueBusinessDays__c</fullName>
    <label>Overdue Business Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>