force-app/main/default/objects/Activity/fields/cve__OverdueCalendarDays__c.field-meta.xml
<CustomField>
    <fullName>cve__OverdueCalendarDays__c</fullName>
    <label>Overdue Calendar Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>