force-app/main/default/objects/Activity/fields/cve__Required__c.field-meta.xml
<CustomField>
    <fullName>cve__Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>