force-app/main/default/objects/Activity/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Id</label>
    <referenceTo>Claim_Event_Log__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>